--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Unititled-CP3046-Project",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
   "main": "src/server/index.js",
   "scripts": {
@@ -8,24 +8,23 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-cov": "^0.2.1",
-    "grunt-contrib-jasmine": "^0.6.3"
-  },
-  "dependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-cssmin": "~0.8.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-mocha-cov": "^0.2.1",
+    "grunt-contrib-jasmine": "^0.6.3",
+    "grunt-ember-templates": "^0.4.21"
+  },
+  "dependencies": {
     "underscore": "~1.6.0",
-    "express": "^3.4.8",
-    "mongoose": "^3.8.8",
     "connect": "^2.14.5",
     "async": "^0.9.0",
-    "grunt-compile-handlebars": "^0.7.5"
+    "express": "^4.5.1"
   },
   "engines": {
     "node": ">=0.10"
