--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "ember": "~1.5.1"
+    "ember": "1.6.0",
+    "ember-data": "1.0.0-beta.7",
+    "bootstrap-sass-official": "~3.2.0"
   }
 }
