--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "underscore": "~1.6.0",
     "connect": "^2.14.5",
     "async": "^0.9.0",
-    "express": "^4.5.1"
+    "express": "^4.5.1",
+    "bootstrap-sass": "^3.2.0"
   },
   "engines": {
     "node": ">=0.10"
