--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "ember": "1.6.0",
     "ember-data": "1.0.0-beta.7",
-    "bootstrap-sass-official": "~3.2.0"
+    "bootstrap-sass-official": "~3.2.0",
+    "react": "~0.10.0"
   }
 }
