--- a/test/client/.jshintrc
+++ b/test/client/.jshintrc
@@ -17,6 +17,12 @@
     "Backbone",
     "ClassExtender",
     "$",
-    "_"
+    "_",
+    "describe",
+    "it",
+    "expect",
+    "mocha",
+    "chai",
+    "assert"
   ]
 }
