--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "backbone": "~1.1.2",
     "class-extender": "~1.0.7",
     "mocha": "~1.20.1",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "bootstrap": "~3.2.0"
   }
 }
