--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "grunt-mocha-cov": "^0.2.1",
     "grunt-contrib-jasmine": "^0.6.3",
     "grunt-jsxhint": "0.0.3",
-    "grunt-react": "^0.8.2"
+    "grunt-react": "^0.8.2",
+    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-test": "^0.11.0",
+    "grunt-contrib-connect": "^0.8.0"
   },
   "dependencies": {
     "underscore": "~1.6.0",
     "connect": "^2.14.5",
     "async": "^0.9.0",
     "express": "^4.5.1",
-    "bootstrap-sass": "^3.2.0"
+    "mongodb": "^1.4.7",
+    "monk": "^0.9.0"
   },
   "engines": {
     "node": ">=0.10"
