--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "grunt-react": "^0.8.2",
     "grunt-mocha": "^0.4.11",
     "grunt-mocha-test": "^0.11.0",
-    "grunt-contrib-connect": "^0.8.0"
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-concat": "^0.4.0"
   },
   "dependencies": {
     "underscore": "~1.6.0",
     "connect": "^2.14.5",
     "async": "^0.9.0",
     "express": "^4.5.1",
-    "mongodb": "^1.4.7"
+    "mongodb": "^1.4.7",
+    "mori": "^0.2.9"
   },
   "engines": {
     "node": ">=0.10"
