--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,9 @@
     "bootstrap-sass-official": "~3.2.0",
     "react": "~0.10.0",
     "underscore": "~1.6.0",
-    "Backbone.localStorage": "~1.1.9",
-    "backbone": "~1.1.2",
     "class-extender": "~1.0.7",
     "mocha": "~1.20.1",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "selectize": "~0.10.1"
   }
 }
