--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt-mocha": "^0.4.11",
     "grunt-mocha-test": "^0.11.0",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-concat": "^0.4.0"
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-mocha-browser": "0.0.5"
   },
   "dependencies": {
     "underscore": "~1.6.0",
