--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "class-extender": "~1.0.7",
     "mocha": "~1.20.1",
     "chai": "~1.9.1",
-    "selectize": "~0.10.1"
+    "selectize": "~0.10.1",
+    "es6-promise": "~1.0.0",
+    "async": "~0.9.0"
   }
 }
