--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "chai": "~1.9.1",
     "selectize": "~0.10.1",
     "es6-promise": "~1.0.0",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "react-bootstrap": "~0.11.1"
   }
 }
