--- a/package.json
+++ b/package.json
@@ -7,26 +7,25 @@
     "start": "node src/server/index.js",
     "test": "grunt test"
   },
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.11",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-cssmin": "~0.8.0",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-jsxhint": "0.0.3",
-    "grunt-react": "^0.8.2",
-    "grunt-mocha": "^0.4.11",
-    "grunt-mocha-test": "^0.11.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-mocha-browser": "0.0.5"
-  },
   "dependencies": {
     "async": "^0.9.0",
     "connect": "^2.14.5",
     "express": "^4.5.1",
+    "grunt": "~0.4.2",
+    "grunt-cli": "~0.1.11",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "~0.8.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-jsxhint": "0.0.3",
+    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-browser": "0.0.5",
+    "grunt-mocha-test": "^0.11.0",
+    "grunt-react": "^0.8.2",
     "mongodb": "^1.4.7",
     "mori": "^0.2.9",
     "ramda": "^0.2.4",
