--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "selectize": "~0.10.1",
     "es6-promise": "~1.0.0",
     "async": "~0.9.0",
-    "react-bootstrap": "~0.11.1"
+    "react-bootstrap": "~0.11.1",
+    "es5-shim": "~4.0.2"
   }
 }
