--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "connect": "^2.14.5",
-    "express": "^4.5.1",
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
@@ -23,9 +20,12 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-jsxhint": "0.0.3",
     "grunt-mocha": "^0.4.11",
-    "grunt-mocha-browser": "0.0.5",
+    "grunt-mocha-phantomjs": "^0.6.0",
     "grunt-mocha-test": "^0.11.0",
     "grunt-react": "^0.8.2",
+    "async": "^0.9.0",
+    "connect": "^2.14.5",
+    "express": "^4.5.1",
     "mongodb": "^1.4.7",
     "mori": "^0.2.9",
     "ramda": "^0.2.4",
