--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install mongodb-org
+  - sudo apt-get install screen
+  - screen -d -m npm mongod
   - npm install -g bower
   - npm install -g grunt-cli
   - gem install sass
