--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ install:
   - grunt build
   - screen -d -m npm start
   - sleep 30
+  - curl http://localhost:3000 | echo && echo '\n'
 script:
   - make test
