--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "async": "~0.9.0",
     "react-bootstrap": "~0.11.1",
     "es5-shim": "~4.0.2",
-    "chartjs": "~0.2.0"
+    "chartjs": "~0.2.0",
+    "randomColor": "~0.1.1"
   }
 }
