--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 before_install:
-  - sudo apt-get update -qq
+  - sudo apt-get update
   - sudo apt-get install mongodb-org
   - sudo apt-get install screen
   - screen -d -m mongod
