--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
+sudo: true
 before_install:
-  - sudo apt-get update
+  - sudo apt-get update -qq
   - sudo apt-get install mongodb-org
   - sudo apt-get install screen
   - screen -d -m mongod
