see app runnning

--- a/wercker.yml
+++ b/wercker.yml
@@ -23,7 +23,8 @@ build:
           bower install
           make place-assets
           grunt travis
-          screen -d -m npm start
+          # screen -d -m npm start
+          npm start
           sleep 5
           curl http://localhost:3000
     - npm-test
