--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "~0.11.1",
     "es5-shim": "~4.0.2",
     "chartjs": "~0.2.0",
-    "randomColor": "~0.1.1"
+    "randomColor": "~0.1.1",
+    "color-js": "~1.0.1"
   }
 }
